# tva-web

./: .codespellrc  .cspell.json  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .jscpd.json  .ls-lint.yml  .markdownlint.json  .mega-linter.yml  .prettierrc.json  .taplo.toml  .yamllint.yaml  CHANGELOG_TEMP.md  README.md  SECURITY.md  index.html  justfile  readme.md
.github/workflows/: ci.yml  deploy.yml
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: app.js  decode.js  index.html  style.css
web/libav/: libav-6.0.7.0.2-webcodecs-avf.wasm.js  libav-6.0.7.0.2-webcodecs-avf.wasm.wasm  libav-webcodecs-avf.js
