[package]
name = "tva-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tva-core = { git = "https://github.com/tayuLuc/tva.git", features = [
    "compare-image",
    "smooth-savgol",
] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
