[package]
edition = "2021"
license = "MIT"
name = "tva-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tva-core = { features = ["compare-image", "smooth-savgol"], git = "https://github.com/tayuLuc/tva.git" }
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "s"
