[dependencies]
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tva-core = { features = ["compare-image", "smooth-savgol"], git = "https://github.com/tayuLuc/tva.git" }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
license = "MIT"
name = "tva-wasm"
version = "0.1.0"

[profile.release]
lto = true
opt-level = "s"
